# treeline-money

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PRFAQ.md  PR_DESCRIPTION.md  README.md  community-plugins.json  community-plugins.schema.json  pyproject.toml
.claude/agents/: architecture-guardian.md
.github/workflows/: publish.yml
cli/: pyproject.toml
cli-rs/: Cargo.toml
cli-rs/src/: domain.rs  main.rs  repository.rs
cli-rs/src/infra/: csv_provider.rs  demo_provider.rs  duckdb_repo.rs  mod.rs  simplefin.rs
cli-rs/src/services/: mod.rs
cli/src/treeline/: cli.py  config.py  domain.py  utils.py
cli/src/treeline/abstractions/: __init__.py  backup.py  data.py  db.py
cli/src/treeline/app/: account_service.py  backfill_service.py  backup_service.py  container.py  db_service.py  doctor_service.py  encryption_service.py  import_service.py  integration_service.py  plugin_service.py  preferences_service.py  service.py  status_service.py  sync_service.py  tagging_service.py
cli/src/treeline/commands/: __init__.py  backfill.py  backup.py  compact.py  demo.py  doctor.py  encrypt.py  import_cmd.py  import_csv.py  new.py  plugin.py  query.py  remove.py  setup.py  status.py  sync.py  tag.py  tag_rich.py
cli/src/treeline/ext/: __init__.py  decorators.py
cli/src/treeline/infra/: csv_provider.py  demo.py  duckdb.py  local_backup.py  simplefin.py
cli/src/treeline/infra/migrations/: 000_migrations.sql  001_initial_schema.sql  002_transaction_editing.sql  003_plugin_budget.sql  004_budget_month_scoped.sql  005_plugin_transactions_rules.sql  006_plugin_accounts_query.sql  007_balance_snapshot_source.sql
cli/tests/smoke/: CLAUDE.md  test_demo_mode_cli.py  test_doctor.py  test_encrypt.py
cli/tests/unit/: test_cli.py  test_logging.py
cli/tests/unit/app/: test_backup_service.py  test_db_service.py  test_import_service.py
cli/tests/unit/domain/: test_domain_models.py
cli/tests/unit/infra/: test_csv_provider.py  test_duckdb_tag_update.py  test_local_backup.py  test_simplefin_provider.py
docs/: AGENTS.md  demo_mode.md  plugins.md  taggers.md
docs/internal/: architecture.md  cli_consolidation_analysis.md  cli_patterns.md  csv_import_design.md  implementation_plan.md  local_development.md  tasks.md  textual_ui_proposal.md  tui_theming_pattern.md
docs/internal/ideas/: vscode_extension.md
docs/internal/prompts/: power_session.md
docs/internal/proposals/: analysis_mode.md  analysis_mode_v2.md
docs/internal/tasks/: CLAUDE.md  analysis_mode.md  backfill_balances.md  centralized_keybindings.md  chart_from_query.md  charts_feature.md  cleanup_sql_and_query_cmds.md  cli_exit_mode.md  cli_keyboard_enhancements.md  cli_theming.md  cli_welcome_experience.md  complete_cli_theming_migration.md  consistent_tui_feel.md  disable_import_debug_file.md  document_inspiration.md  import_better_csv_format_handling.md  import_file_autocomplete.md  load_saved_queries.md  refactor_pyplot_to_separate_project.md  schema_browser.md  sync_show_transaction_breakdown.md  tag_mode_autocomplete.md  theme_command.md  unify_visuals_for_all_modes.md  use_home_treeline_dir.md
examples/: README.md
examples/marimo_dashboard/: README.md  dashboard.py  pyproject.toml
examples/markdown_report/: README.md  generate_report.py  pyproject.toml
examples/subscription_finder/: README.md  find_subscriptions.py  pyproject.toml
plugin-template/: AGENTS.md  README.md  manifest.json  package.json  tsconfig.json  vite.config.ts
plugin-template/.github/workflows/: release.yml
plugin-template/scripts/: release.sh
plugin-template/src/: HelloWorldView.svelte  index.ts  types.ts
scripts/: README.md  release.sh
src/treeline/: abstractions.py  cli.py  domain.py  theme.py  tui_theme.py  utils.py
src/treeline/abstractions/: __init__.py  ai.py  auth.py  config.py  data.py  db.py  storage.py  tagging.py
src/treeline/app/: backfill_service.py  container.py  service.py  tagger_utils.py
src/treeline/commands/: analysis.py  analysis_textual.py  chart.py  chart_config.py  chart_wizard.py  charts_textual.py  chat.py  help.py  import_csv.py  login.py  queries_textual.py  query.py  saved_queries.py  schema.py  simplefin.py  status.py  sync.py  tag.py  tag_textual.py
src/treeline/ext/: decorators.py
src/treeline/infra/: anthropic.py  csv_provider.py  demo_provider.py  duckdb.py  file_storage.py  keyring_store.py  simplefin.py  supabase.py  tag_suggesters.py
src/treeline/pyplot/: __init__.py  api.py
src/treeline/themes/: default.json
tests/smoke/: CLAUDE.md  test_chart_workflow.py  test_csv_import.py  test_demo_mode_cli.py  test_slash_commands.py
tests/unit/: test_account_type_migration.py  test_amount_formatting.py  test_db_service.py  test_domain_models.py  test_integration_service.py  test_migrations.py  test_supabase_auth_provider.py  test_sync_service.py  test_tag_suggester.py  test_theme.py
tests/unit/app/: test_account_service.py  test_auth_service.py  test_container_demo_mode.py  test_db_service.py  test_demo_mode_e2e.py  test_import_service.py  test_integration_service.py  test_sync_date_range.py  test_sync_service.py  test_sync_service_taggers.py  test_sync_service_with_registry.py  test_tagging_service.py
tests/unit/cli/: test_cli_basics.py  test_cli_commands.py  test_file_path_autocomplete.py  test_file_path_prompt.py  test_keyboard_navigation.py  test_repl_autocomplete.py
tests/unit/commands/: test_analysis_sql_editor.py  test_chart_config.py  test_chart_wizard.py  test_post_query_actions.py  test_saved_queries.py  test_saved_query_completer.py  test_schema_command.py  test_sql_command.py  test_tag_display.py
tests/unit/domain/: test_domain_models.py
tests/unit/infra/: test_csv_provider.py  test_demo_provider.py  test_duckdb_repository.py  test_duckdb_tag_update.py  (+2 more)
ui/: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  vite.config.ts
ui/scripts/: build-cli.sh
ui/src/: App.svelte  app.css  main.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: lib.rs  main.rs
(+191 files in other folders)
