[project]
name = "treeline-money"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "duckdb>=1.4.0",
    "httpx>=0.28.1",
    "keyring>=25.6.0",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "supabase>=2.20.0",
    "typer>=0.19.2",
]

[tool.uv]
package = true

[project.scripts]
treeline = "treeline.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
