[package]
name = "treeline"
version = "0.1.0"
edition = "2021"
description = "Treeline - personal finance in your terminal"
authors = ["Treeline"]

[[bin]]
name = "tl"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async
tokio = { version = "1", features = ["full"] }

# Database
duckdb = { version = "1.4", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Decimal
rust_decimal = { version = "1", features = ["serde"] }

# Directories
dirs = "5"

# Environment variables
dotenvy = "0.15"

# Base64
base64 = "0.22"

# URL parsing
url = "2"

# CSV parsing
csv = "1"

# Regex
regex = "1"

# SHA256 hashing
sha2 = "0.10"
hex = "0.4"

# Error handling
thiserror = "1"
anyhow = "1"

# Terminal output
colored = "2"
comfy-table = "7"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
