[package]
name = "treeline"
version = "0.1.48"
description = "A plugin-based personal finance application"
authors = ["treeline"]
edition = "2021"

[lib]
name = "treeline_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
duckdb = { version = "1.4", features = ["bundled"] }
arrow = "56"
chrono = "0.4"
argon2 = "0.5"
base64 = "0.22"
hex = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
